--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,7 @@ input {
   height: 32px;
   text-align: center;
   font-size: 22px;
+  font-family: "Source Sans 3";
   border: none;
   border-radius: 5px;
   margin-bottom: 8px;
